# btreecomp

./: Cargo.toml  adresses-782.csv  btree-1000.bt  foo.txt  r1  res-curl.txt  res_inter  res_tot3  res_tot4
python-test/: btree1.py  btree2.py  btree3-compare.py  lecture-test-1.py
src/: adrBtree.rs  btree.rs  file1.rs  findAdresseAPI.rs  fseek.rs  fseekTotal.rs  main.rs  readSeek.rs  readSeekTot.rs  serializeBtree.rs
src/api/: apiex1.rs
src/lib/: btree.rs  mod.rs
