[package]
name = "btree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="file1"
path="src/file1.rs"

[[bin]]
name="fseek"
path="src/fseek.rs"


[[bin]]
name="srbt"
path="src/serializeBtree.rs"

[[bin]]
name="adr"
path="src/adrBtree.rs"

[dependencies]
rand="*"
time="*"
bincode = "1.3.3"
serde = {version = "1.0.130", features=["derive"]}